--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,10 @@
   --hero-transition: 300ms cubic-bezier(0, 0, 0, 1);
   --transition-step: 50ms;
 }
+::selection {
+  background-color: var(--current);
+  color: #fff;
+}
 body {
   margin: 0;
   min-height: 100vh;
